2004-08-30  Anders Carlsson  <andersca@gnome.org>

	* glib/goption.c: (g_option_context_parse):
	Set prgname to <unknown> if argc and argv are NULL.
	
	* tests/option-test.c: (empty_test1), (main):
	Add test case for that.
	
Sun Aug 29 23:58:38 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/ghash.c (g_hash_table_lookup): Point to 
	g_hash_table_lookup_extended() for differentiation between
	not-found and value-is-NULL.  (#150960, Morten Welinder)

2004-08-27  Matthias Clasen  <mclasen@redhat.com>

	Fix #151193, Stepan Kasal:
	
	* glib/gfileutils.c (g_file_error_from_errno): 
	* glib/gfileutils.h (enum GFileError): Add G_FILE_ERROR_NOSYS.

Fri Aug 27 00:45:41 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/goption.c (g_option_context_parse): Set the program name
	from argv[0], noticed by Masatake YAMATO.

2004-08-26  Tor Lillqvist  <tml@iki.fi>

	* tests/testglib.c (main): Test the new XDG basedir functions.

2004-08-25  Tor Lillqvist  <tml@iki.fi>

	* glib/gwin32.c (g_win32_get_windows_version): New
	function. Returns the Windows version code like GetVersion(),
	except that one can pretend to be running on Win9x by setting the
	G_WIN32_PRETEND_WIN9X environment variable. This is mainly for
	debugging purposed.

	* glib/gwin32.h: Declare it. Define macros G_WIN32_WINDOWS_IS_NT_BASED 
	and G_WIN32_HAVE_WIDECHAR_API to test Windows features at run-time.

2004-08-25  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Post-release version bump.

	* === Released 2.5.2 ===

Wed Aug 25 00:25:08 2004  Matthias Clasen  <maclas@gmx.de>

	* NEWS: Update for 2.5.2

2004-08-25  Tor Lillqvist  <tml@iki.fi>

	Win32 equivalences of the XDG folders
	
	* glib/gutils.c (get_special_folder): New function, calls
	SHGetSpecialFolderLocation() to get path to places like the My
	Documents folder.
	(g_get_any_init): Use CSIDL_PROFILE as HOME if not
	overridden by env vars.
	(g_get_user_data_dir): Use CSIDL_PERSONAL.
	(g_get_user_config_dir): Use CSIDL_APPDATA.