@@ -1,3 +1,12 @@
+2004-09-01  Anders Carlsson  <andersca@gnome.org>
+
+	* glib/goption.c: (g_option_context_free), (print_help),
+	(g_option_context_parse):
+	Handle option contexts without a main group.
+	
+	* tests/option-test.c: (empty_test2), (main):
+	Add test case for that.
+	
 2004-08-30  Anders Carlsson  <andersca@gnome.org>
 
 	* glib/goption.c: (g_option_context_parse):
