@@ -428,6 +428,17 @@ empty_test1 (void)
   g_option_context_free (context);
 }
 
+void
+empty_test2 (void)
+{
+  GOptionContext *context;
+
+  context = g_option_context_new (NULL);
+  g_option_context_parse (context, NULL, NULL, NULL);
+  
+  g_option_context_free (context);
+}
+
 int
 main (int argc, char **argv)
 {
@@ -454,6 +465,7 @@ main (int argc, char **argv)
 
   /* Test parsing empty args */
   empty_test1 ();
+  empty_test2 ();
   
   return 0;
 }
